feat&docs: [api&admin] Comment add images.
