# app/Http/Controllers/Api/CommentController.php
@@ -7,6 +7,7 @@ use App\Http\Resources\CommentCollection;
 use App\Http\Resources\CommentResource;
 use App\Models\Comment;
 use App\Models\Post;
+use App\Traits\FileHandler;
 use Illuminate\Auth\Access\AuthorizationException;
 use Illuminate\Database\Eloquent\ModelNotFoundException;
 use Illuminate\Http\Request;
@@ -18,6 +19,8 @@ use Symfony\Component\HttpFoundation\Response;
  */
 class CommentController extends Controller
 {
+    use FileHandler;
+
     /**
      * Display a listing of the comments.
      *
@@ -46,6 +49,7 @@ class CommentController extends Controller
      * @header token Bearer {personal-access-token}
      * @urlParam post integer required The id of the post. Example: 109
      * @bodyParam content string The content of the comment. Example: commentTest
+     * @bodyParam images file[] The images of the comment. Example: .jpg, .jpeg, .png
      * @responseFile 201 scenario="when comment created." responses/comments.store/201.json
      * @responseFile 401 scenario="without personal access token." responses/401.json
      * @responseFile 404 scenario="when post not found." responses/comments.store/404.json
@@ -59,6 +63,7 @@ class CommentController extends Controller
     {
         $validator = Validator::make($request->all(), [
             'content' => 'required|string',
+            'images.*' => ['nullable', 'mimes:jpg,jpeg,png', 'max:10240'],
         ]);
         if ($validator->fails()) {
             return response()->json([
@@ -67,13 +72,21 @@ class CommentController extends Controller
         } elseif (!$post->active or $post->published_at > now()) {
             throw (new ModelNotFoundException)->setModel($post, $post->id);
         }
+        $comment = $post->comments()->create(array_merge([
+            'user_id' => $request->user()->id
+        ],$request->only([
+            'content',
+        ])));
 
-        return new CommentResource(
-            $post->comments()->create(array_merge(['user_id' => $request->user()->id], $request->only([
-                'content',
-            ])))->refresh(),
-            Response::HTTP_CREATED
-        );
+        $filePaths = [];
+        foreach ($request->file('images', []) as $file) {
+            (($path = $file->store("/comments/{$comment->id}", 'public')) === false) ?:
+                $filePaths[] = $path;
+        }
+        $comment->images = $filePaths;
+        $comment->save();
+
+        return new CommentResource($comment, Response::HTTP_CREATED);
     }
 
     /**
@@ -104,6 +117,8 @@ class CommentController extends Controller
      * @urlParam post integer required The id of the post. Example: 109
      * @urlParam comment integer required The id of the comment. Example: 32
      * @bodyParam content string required The content of the comment. Example: 0724Comment
+     * @bodyParam images file[] The images of the comment. Example: .jpg, .jpeg, .png
+     * @bodyParam _method string Required if the <code><b>images</b></code> of the comment are uploaded, must be <b>PUT</b> and request method must be <small class="badge badge-black">POST</small>. Example: PUT
      * @responseFile 200 scenario="when comment updated." responses/comments.update/200.json
      * @responseFile 401 scenario="without personal access token." responses/401.json
      * @responseFile 404 scenario="when post not found." responses/comments.update/404_post.json
@@ -117,8 +132,27 @@ class CommentController extends Controller
      */
     public function update(Request $request, Post $post, Comment $comment)
     {
+        if (str_contains(
+            $request->header('content-type'),
+            $contentType = 'multipart/form-data;'
+        ) and $request->input('_method') !== Request::METHOD_PUT) {
+            return response()->json([
+                'data' => [
+                    '_method' => [
+                        sprintf(
+                            'Content type %s must be method:%s, with input _method:%s',
+                            $contentType,
+                            Request::METHOD_POST,
+                            Request::METHOD_PUT
+                        ),
+                    ],
+                ],
+            ], Response::HTTP_UNPROCESSABLE_ENTITY);
+        }
+
         $validator = Validator::make($request->all(), [
             'content' => 'required|string',
+            'images.*' => ['nullable', 'mimes:jpg,jpeg,png', 'max:10240'],
         ]);
         if ($validator->fails()) {
             return response()->json([
@@ -128,9 +162,21 @@ class CommentController extends Controller
             throw new AuthorizationException;
         }
 
-        $comment->update($request->only([
+        $input = $request->only([
             'content',
-        ]));
+        ]);
+
+        if ($request->hasFile('images')) {
+            $filePaths = [];
+            empty($comment->images) ?: static::deleteDirectory($comment);
+            foreach ($request->file('images', []) as $file) {
+                (($path = $file->store("/comments/{$comment->id}", 'public')) === false) ?:
+                    $filePaths[] = $path;
+            }
+            $input['images'] = $filePaths;
+        }
+
+        $comment->update($input);
 
         return new CommentResource($comment->refresh());
     }
